<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/engLang"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_language"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/transparent_rounded_shape"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_rounded_shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#FE5295"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textAllCaps="true"
                android:textColor="#FAD0E1"
                android:textSize="13dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>